--- a/src/app/static/footer/footer.component.html
+++ b/src/app/static/footer/footer.component.html
@@ -1,1 +1,156 @@
-<p>footer works!</p>
+<footer>
+    <div class="container">
+        <div class="footer-top">
+            <img class="decor-img left"
+                src="https://mapizza.com.ua/wp-content/themes/mamma-italiana/img/decor-img-1.svg" alt="">
+            <img class="decor-img right"
+                src="https://mapizza.com.ua/wp-content/themes/mamma-italiana/img/decor-img-2.svg" alt="">
+            <div class="row">
+                <div class="col-md-12 col-xl-3">
+                    <div class="footer-info"><a class="footer-logo" href="https://mapizza.com.ua">
+                            <img src="https://mapizza.com.ua/wp-content/uploads/2022/03/logo-pizza-red.svg" alt="">
+                        </a>
+                        <div class="footer-phone">
+                            <a href="tel:+380971830618">+38 097 18 306 18 </a>
+                            <p>нд-чт 09:30 − 21:00 <br> пт- сб 09:30 − 22:00 <br></p>
+                        </div>
+                        <ul class="social">
+                            <li>
+                                <a href="https://www.facebook.com/pizza.mammaitaliana">
+                                    <img src="https://mapizza.com.ua/wp-content/uploads/2021/09/i-facebook.svg"
+                                        alt="https://mapizza.com.ua/wp-content/uploads/2021/09/i-facebook.svg">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://www.instagram.com/_mapizza_/?igshid=NmNmNjAwNzg%3D">
+                                    <img src="https://mapizza.com.ua/wp-content/uploads/2021/09/i-instagram.svg"
+                                        alt="https://mapizza.com.ua/wp-content/uploads/2021/09/i-instagram.svg">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://www.youtube.com/watch?v=EkfysYf80Ak">
+                                    <img src="https://mapizza.com.ua/wp-content/uploads/2021/09/i-you-tube.svg"
+                                        alt="https://mapizza.com.ua/wp-content/uploads/2021/09/i-you-tube.svg">
+                                </a>
+                            </li>
+                        </ul>
+                        <div class="title_download_app">
+                            Завантажуйте додаток</div>
+                        <ul class="items_download_app">
+                            <li>
+                                <a href="https://apps.apple.com/us/app/ma-pizza/id1596914596">
+                                    <img src="https://mapizza.com.ua/wp-content/uploads/2022/09/app-store-download.svg"
+                                        alt="https://mapizza.com.ua/wp-content/uploads/2022/09/app-store-download.svg">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://play.google.com/store/apps/details?id=com.mamaitaliano.app">
+                                    <img src="https://mapizza.com.ua/wp-content/uploads/2022/09/google-play-download.svg"
+                                        alt="https://mapizza.com.ua/wp-content/uploads/2022/09/google-play-download.svg">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-4 col-xl-3">
+                    <div class="footer-caption">
+                        Меню:</div>
+                    <ul class="footer-menu-list">
+                        <li
+                            class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-1129">
+                            <a href="https://mapizza.com.ua/#pizza" aria-current="page">Піца</a></li>
+                        <li class="menu-item menu-item-type-taxonomy menu-item-object-product_cat menu-item-354"><a
+                                href="https://mapizza.com.ua/salads/">Салати</a></li>
+                        <li class="menu-item menu-item-type-taxonomy menu-item-object-product_cat menu-item-355"><a
+                                href="https://mapizza.com.ua/desserts/">Десерти</a></li>
+                        <li class="menu-item menu-item-type-taxonomy menu-item-object-product_cat menu-item-356"><a
+                                href="https://mapizza.com.ua/drinks/">Напої</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-4 col-xl-3">
+                    <div class="footer-caption">
+                        Про компанію:</div>
+                    <ul class="footer-links">
+                        <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-375"><a
+                                href="https://mapizza.com.ua/about-us/">Про нас</a></li>
+                        <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-373"><a
+                                href="https://mapizza.com.ua/dostavka/">Доставка та оплата</a></li>
+                        <li class="menu-item menu-item-type-post_type_archive menu-item-object-actions menu-item-378"><a
+                                href="https://mapizza.com.ua/actions/">Акції</a></li>
+                        <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-374"><a
+                                href="https://mapizza.com.ua/kontakty/">Контакти</a></li>
+                        <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1128"><a
+                                href="https://mapizza.com.ua/career/">Вакансії</a></li>
+                        <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3484"><a
+                                href="https://mapizza.com.ua/news/">Новини</a></li>
+                        <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-36615"><a
+                                href="https://go.expirenza.com/review?code=UWKV2">Відгук</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-4 col-xl-3">
+                    <div class="footer-caption">
+                        Львів:</div>
+                    <ul class="footer-address">
+                        <li>
+                            <p>вул. Пасічна, 181</p>
+                        </li>
+                        <li>
+                            <p>просп. Червоної Калини, 60 (ТЦ Арсен)</p>
+                        </li>
+                        <li>
+                            <p>вул. Івана Пулюя, 12</p>
+                        </li>
+                        <li>
+                            <p>вул. Малоголосківська, 16</p>
+                        </li>
+                        <li>
+                            <p>вул. Китайська, 10</p>
+                        </li>
+                        <li>
+                            <p>вул. Івана Франка, 71</p>
+                        </li>
+                        <li>
+                            <p>вул. Залізнична, 19</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <div class="row  align-items-center">
+                <div class="col-lg-4 col-md-6 text-md-left text-xs-center pe-md-0">
+                    <div class="footer-item copy ">
+                        <p>©2023 MA Pizza Всі права захищено</p>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-md-6 text-lg-center text-md-right text-xs-center">
+                    <div class="footer-item">
+                        <a href="https://mapizza.com.ua/privacy-policy/" target="_blank">
+                            Політика конфіденційності </a>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-md-6 text-lg-center text-md-right text-xs-center">
+                    <div class="footer-item">
+                        <a href="https://mapizza.com.ua/dogovir-publichnoyi-oferty/" target="_blank">
+                            Оферта </a>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-md-6 text-xs-center">
+                    <div class="footer-item cards">
+                        <img src="https://mapizza.com.ua/wp-content/themes/mamma-italiana/img/visa-card.svg" alt="">
+                        <img src="https://mapizza.com.ua/wp-content/themes/mamma-italiana/img/master-card.svg" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-2 col-md-6 text-md-right text-xs-center">
+                    <div class="footer-item develope">
+                        <a href="http://redstone.media/" target="_blank">
+                            <span>Розробка сайтів</span> <img
+                                src="https://mapizza.com.ua/wp-content/themes/mamma-italiana/img/redstone.svg"
+                                alt="REDSTONE">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
